News boxen er blevet opdateret, der er kommet en facebook knap ind.
Jeg har arbejdet på at lave fungerende links, og prøvet at sætte elementerne op i news boxene.

--- a/tendo_news.html
+++ b/tendo_news.html
@@ -16,5 +16,51 @@
 			<img id="logo_container" src="resurser/tendo_logo_hvid.png" alt="Tendo Logo"/>
 		</ul>
 	</div>
+	<div id="screenshot_container">
+		<img id="screenshot_img" src="resurser/tendo_banner2.PNG" alt="Screenshot">
+	</div>
+	<div>
+		<div class="responsive">
+  			<div class="gallery">
+				<div class="gallery_box_top">
+					<div class="so_me_logo_container">
+						<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/754975214845587/?type=3&theater" target="_blank">
+						<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
+						</a>
+					</div>
+				</div>
+    			<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/754975214845587/?type=3&theater">
+					<img src="resurser/tendo_post1.jpg" alt="Facebook post picture">
+						<div class="desc">
+							<h2 id="headline">Startup within Robitics!</h2>
+							<p>Tendo has been nominated to beone of the 20 best European startups in robotics.</p>
+						</div>
+				</a>
+					
+  			</div>
+			</div>
+	</div>
+	<div class="responsive">
+  		<div class="gallery">
+			<div class="gallery_box_top"></div>
+    		<a target="_blank" href="img_forest.jpg">
+      		<img src="img_forest.jpg" alt="Forest">
+    		</a>
+    		<div class="desc">Add a description of the image here</div>
+  		</div>
+	</div>
+
+	<div class="responsive">
+  		<div class="gallery">
+			<div class="gallery_box_top">
+			</div>
+    		<a target="_blank" href="img_lights.jpg">
+      		<img src="img_lights.jpg" alt="Northern Lights">
+    		</a>
+    	<div class="desc">Add a description of the image here</div>
+  		</div>
+	</div>
+
+<div class="clearfix"></div>
 </body>
 </html>
