Opdatering af news-box.
News boxen er kommet tættere på at være færdig. Billedet er blevet re-sized, for at passe bedre på et youtube format, såvel som facebook og instagram.

--- a/tendo_news.html
+++ b/tendo_news.html
@@ -24,16 +24,19 @@
   			<div class="gallery">
 				<div class="gallery_box_top">
 					<div class="so_me_logo_container">
+						<a href="https://www.instagram.com/p/BntknX8F9CT/?hl=da&taken-by=tendoforpeople" target="_blank">
+							<img src="resurser/insta_button_orange.png" alt="Instagram button" class="so_me_buttons">
+						</a>
 						<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/754975214845587/?type=3&theater" target="_blank">
-						<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
+							<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
 						</a>
 					</div>
 				</div>
     			<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/754975214845587/?type=3&theater">
-					<img src="resurser/tendo_post1.jpg" alt="Facebook post picture">
+					<img src="resurser/tendo_post1_red.jpg" alt="Facebook post picture">
 						<div class="desc">
-							<h2 id="headline">Startup within Robitics!</h2>
-							<p>Tendo has been nominated to beone of the 20 best European startups in robotics.</p>
+							<h2 class="headline">Startup within Robitics!</h2>
+								<p class="headline">Tendo has been nominated to beone of the 20 best European startups in robotics.</p>
 						</div>
 				</a>
 					
