--- a/tendo_news.html
+++ b/tendo_news.html
@@ -36,7 +36,7 @@
 					<img src="resurser/tendo_post1_red.jpg" alt="Facebook post picture">
 						<div class="desc">
 							<h2 class="headline">Startup within Robitics!</h2>
-								<p class="headline">Tendo has been nominated to beone of the 20 best European startups in robotics.</p>
+								<p class="headline">Tendo has been nominated to be one of the 20 best European startups in robotics.</p>
 						</div>
 				</a>
 					
@@ -45,22 +45,50 @@
 	</div>
 	<div class="responsive">
   		<div class="gallery">
-			<div class="gallery_box_top"></div>
-    		<a target="_blank" href="img_forest.jpg">
-      		<img src="img_forest.jpg" alt="Forest">
-    		</a>
-    		<div class="desc">Add a description of the image here</div>
+			<div class="gallery_box_top">
+				<div class="so_me_logo_container">
+					<div>
+						<a href="https://www.instagram.com/p/BnlSrCjF8EL/?hl=da&taken-by=tendoforpeople">
+							<img src="resurser/insta_button_orange.png" class="so_me_buttons" alt="Instagram button">
+						</a>
+					</div>
+						<a href="https://www.facebook.com/tendoforpeople/posts/753391065004002?__xts__[0]=68.ARAWT6AvRFX6CdYE8sQBnOWvJujaemKfmdN2vJjOh-qIM8Qnq7Gg1B_A-jEF8ZUKgrBOz5Si-_Iq5QIwb1bduHSNu3Eh61R1YR9XbsWRztFewxzldMqO60dbBhFtOL8J8BPzasdIl0NssAWivusZ_jeHWmE_YmeO_vHGvqXjKNuhL8V8-EFl&__tn__=-R">
+							<img class="so_me_buttons" alt="Facebook button" src="resurser/fb_btn_orange.png">
+						</a>
+				</div>
+			</div>
+    			<a target="_blank" href="https://www.youtube.com/watch?v=glZhnK6LI0c&feature=youtu.be">
+      				<img src="resurser/meet_tendo_video.jpg" alt="Meet Tendo - Video link">
+    			
+    			<div class="desc">
+					<h2 class="headline">Meet Tendo</h2>
+						<p class="headline">Odense Robotics just launched their new webpage where you can find this great video about us!</p>
+				</div>
+				</a>
   		</div>
 	</div>
 
 	<div class="responsive">
   		<div class="gallery">
 			<div class="gallery_box_top">
+				<div class="so_me_logo_container">
+					<a href="https://www.instagram.com/p/BnW4TuilbfV/?hl=da&taken-by=tendoforpeople">
+						<img alt="Instagram button" src="resurser/insta_button_orange.png" class="so_me_buttons">
+					</a>
+					<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
+						<img alt="Facebook button" src="resurser/fb_btn_orange.png" class="so_me_buttons">
+					</a>
+				</div>
 			</div>
-    		<a target="_blank" href="img_lights.jpg">
-      		<img src="img_lights.jpg" alt="Northern Lights">
+    		<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
+      		<img src="resurser/tendo_discussion.JPG" alt="Tendo discussion">
     		</a>
-    	<div class="desc">Add a description of the image here</div>
+    	<div class="desc">
+			<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
+			<h2 class="headline">Reinventing leadership?</h2>
+				<p class="headline">The topic on today's discussions at techfestival, which Tendo's CEO Sofie Wogeparticipated in.</p>
+			</a>
+		</div>
   		</div>
 	</div>
 
