Næsten færdig navbar, newsfeed og footer.
Siden er gjort responsiv, med undtagelse af navbaren. Her mangler der at indsættes kode til burgermenu.

--- a/tendo_news.html
+++ b/tendo_news.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="tendo_news.css">
 <title>tendo-for-people</title>
 </head>
 
 <body>
-	<div id="wrapper">
-		<ul id="navbar_buttons">
-			<li class="navbar_li_item"><a href=""><h1>Contact</h1></a></li>
-			<li class="navbar_li_item"><a href=""><h1>News</h1></a></li>
-			<li class="navbar_li_item"><a href=""><h1>About</h1></a></li>
-			<li class="navbar_li_item"><a href=""><h1>Home</h1></a></li>
-			<img id="logo_container" src="resurser/tendo_logo_hvid.png" alt="Tendo Logo"/>
-		</ul>
+	<ul id="navbar_buttons">
+		<li class="navbar_li_item"><a href=""><h1>Contact</h1></a></li>
+		<li class="navbar_li_item"><a href=""><h1>News</h1></a></li>
+		<li class="navbar_li_item"><a href=""><h1>About</h1></a></li>
+		<li class="navbar_li_item"><a href=""><h1>Home</h1></a></li>
+		<img id="logo_container" src="resurser/tendo_full_logo_white.png" alt="Tendo Logo"/>
+	</ul>
+	<div id="screenshot_responsive">
+		<div id="screenshot_container">
+			<img id="screenshot_img" src="resurser/exoskelet_m_maskot_redigeret.jpg" alt="Screenshot">
 	</div>
-	<div id="screenshot_container">
-		<img id="screenshot_img" src="resurser/tendo_banner2.PNG" alt="Screenshot">
 	</div>
-	<div>
-		<div class="responsive">
+<div class="grid_container">
+	<div class="newsbox_container">
   			<div class="gallery">
 				<div class="gallery_box_top">
 					<div class="so_me_logo_container">
@@ -35,63 +35,165 @@
     			<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/754975214845587/?type=3&theater">
 					<img src="resurser/tendo_post1_red.jpg" alt="Facebook post picture">
 						<div class="desc">
-							<h2 class="headline">Startup within Robitics!</h2>
-								<p class="headline">Tendo has been nominated to be one of the 20 best European startups in robotics.</p>
+							<h3 class="headline">Startup within Robitics!</h3>
+								<p class="headline">Tendo has been nominated to be one of the 20 best European startups in robotics. We are so proud!</p>
 						</div>
 				</a>
-					
   			</div>
-			</div>
 	</div>
-	<div class="responsive">
+	<div class="newsbox_container">
   		<div class="gallery">
 			<div class="gallery_box_top">
 				<div class="so_me_logo_container">
 					<div>
-						<a href="https://www.instagram.com/p/BnlSrCjF8EL/?hl=da&taken-by=tendoforpeople">
+						<a href="https://www.instagram.com/p/BnlSrCjF8EL/?hl=da&taken-by=tendoforpeople" target="_blank">
 							<img src="resurser/insta_button_orange.png" class="so_me_buttons" alt="Instagram button">
 						</a>
 					</div>
-						<a href="https://www.facebook.com/tendoforpeople/posts/753391065004002?__xts__[0]=68.ARAWT6AvRFX6CdYE8sQBnOWvJujaemKfmdN2vJjOh-qIM8Qnq7Gg1B_A-jEF8ZUKgrBOz5Si-_Iq5QIwb1bduHSNu3Eh61R1YR9XbsWRztFewxzldMqO60dbBhFtOL8J8BPzasdIl0NssAWivusZ_jeHWmE_YmeO_vHGvqXjKNuhL8V8-EFl&__tn__=-R">
+						<a href="https://www.facebook.com/tendoforpeople/posts/753391065004002?__xts__[0]=68.ARAWT6AvRFX6CdYE8sQBnOWvJujaemKfmdN2vJjOh-qIM8Qnq7Gg1B_A-jEF8ZUKgrBOz5Si-_Iq5QIwb1bduHSNu3Eh61R1YR9XbsWRztFewxzldMqO60dbBhFtOL8J8BPzasdIl0NssAWivusZ_jeHWmE_YmeO_vHGvqXjKNuhL8V8-EFl&__tn__=-R" target="_blank">
 							<img class="so_me_buttons" alt="Facebook button" src="resurser/fb_btn_orange.png">
 						</a>
 				</div>
 			</div>
+			<div>
     			<a target="_blank" href="https://www.youtube.com/watch?v=glZhnK6LI0c&feature=youtu.be">
       				<img src="resurser/meet_tendo_video.jpg" alt="Meet Tendo - Video link">
-    			
     			<div class="desc">
-					<h2 class="headline">Meet Tendo</h2>
+					<h3 class="headline">Meet Tendo</h3>
 						<p class="headline">Odense Robotics just launched their new webpage where you can find this great video about us!</p>
 				</div>
 				</a>
+			</div>
   		</div>
 	</div>
-
-	<div class="responsive">
+	<div class="newsbox_container">
   		<div class="gallery">
 			<div class="gallery_box_top">
 				<div class="so_me_logo_container">
-					<a href="https://www.instagram.com/p/BnW4TuilbfV/?hl=da&taken-by=tendoforpeople">
+					<a href="https://www.instagram.com/p/BnW4TuilbfV/?hl=da&taken-by=tendoforpeople" target="_blank">
 						<img alt="Instagram button" src="resurser/insta_button_orange.png" class="so_me_buttons">
 					</a>
-					<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
+					<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater" target="_blank">
 						<img alt="Facebook button" src="resurser/fb_btn_orange.png" class="so_me_buttons">
 					</a>
 				</div>
 			</div>
-    		<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
-      		<img src="resurser/tendo_discussion.JPG" alt="Tendo discussion">
-    		</a>
-    	<div class="desc">
-			<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
-			<h2 class="headline">Reinventing leadership?</h2>
-				<p class="headline">The topic on today's discussions at techfestival, which Tendo's CEO Sofie Wogeparticipated in.</p>
-			</a>
-		</div>
+    			<a target="_blank" href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater">
+      				<img src="resurser/tendo_discussion.JPG" alt="Tendo discussion">
+    			</a>
+    		<div class="desc">
+				<a href="https://www.facebook.com/tendoforpeople/photos/a.245678882441892/750243128652129/?type=3&theater" target="_blank">
+					<h3 class="headline">Reinventing leadership?</h3>
+					<p class="headline">The topic on today's discussions at techfestival, which Tendo's CEO Sofie Woge participated in.</p>
+				</a>
+			</div>
   		</div>
 	</div>
-
-<div class="clearfix"></div>
+	<div class="newsbox_container">
+		<div class="gallery">
+			<div class="gallery_box_top">
+				<div class="so_me_logo_container">
+					<a href="https://www.instagram.com/p/BnJDT7hFVYv/?hl=da&taken-by=tendoforpeople" target="_blank">
+						<img src="resurser/insta_button_orange.png" alt="Instagram Button" class="so_me_buttons">
+					</a>
+					<a href="https://www.facebook.com/tendoforpeople/posts/747582725584836?__xts__[0]=68.ARBL__rFq9x5jL3YuNiaffANJ4RrqNna3sld-nmyDDIc_N0npPr2WWDHCmdo58U3Ls-93To6MRgo6i2S3wQ8ALpIl7cBhWAmYBUgRQdTQ0c5QOOyw9UZj4eBOxeWPg_PpH_UZGybwJuceBDmAkzEk20CYfxMopFRt1F_aS5J8m-g4sCIjdGi&__tn__=-R" target="_blank">
+						<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
+					</a>
+				</div>
+			</div>
+			<a href="https://www.facebook.com/tendoforpeople/posts/747582725584836?__xts__[0]=68.ARBL__rFq9x5jL3YuNiaffANJ4RrqNna3sld-nmyDDIc_N0npPr2WWDHCmdo58U3Ls-93To6MRgo6i2S3wQ8ALpIl7cBhWAmYBUgRQdTQ0c5QOOyw9UZj4eBOxeWPg_PpH_UZGybwJuceBDmAkzEk20CYfxMopFRt1F_aS5J8m-g4sCIjdGi&__tn__=-R" target="_blank">
+				<img src="resurser/tendo_post2.jpg" alt="Sofie Woge holding Ud & Se">
+			</a>
+			<div class="desc">
+				<a href="https://www.facebook.com/tendoforpeople/posts/747582725584836?__xts__[0]=68.ARBL__rFq9x5jL3YuNiaffANJ4RrqNna3sld-nmyDDIc_N0npPr2WWDHCmdo58U3Ls-93To6MRgo6i2S3wQ8ALpIl7cBhWAmYBUgRQdTQ0c5QOOyw9UZj4eBOxeWPg_PpH_UZGybwJuceBDmAkzEk20CYfxMopFRt1F_aS5J8m-g4sCIjdGi&__tn__=-R" target="_blank">
+					<h3 class="headline">Tendo in DSB's Ud & Se!</h3>
+					<p class="headline">Make sure to take a look in DSB's magazine Ud & Se, featuring Tendo's CEO, Sofie Woge, it's worth the trip!<br>
+					See you on the train.</p>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="newsbox_container">
+		<div class="gallery">
+			<div class="gallery_box_top">
+				<div class="so_me_logo_container">
+					<a href="https://www.instagram.com/tendoforpeople/?hl=da" target="_blank">
+						<img src="resurser/insta_button_orange.png" alt="Instagram Button" class="so_me_buttons">
+					</a>
+					<a href="https://www.facebook.com/tendoforpeople/posts/747565748919867?__xts__[0]=68.ARBYjQ6klcWUZmth6H6qsXdm05KlCrNMy7eXbjeHdtXyPPn5hc733tFNM91DcmoPoAgx6bUJyoKXj0-3Uoe99zQYRFYYyPyZyzAryQ0P9WJY1fFE2mWY8yMGeqMNGMISIibnjrXvjME9L0qbWi4C8rLyplnVpp9t9zSNbVL0GBHFdcGW6upH&__tn__=-R" target="_blank">
+						<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
+					</a>
+				</div>
+			</div>
+			<a href="https://www.breakit.se/artikel/15129/almi-invest-backar-vevios-bolaget-bakom-trygghetslarm" target="_blank">
+				<img src="resurser/tendo_post3.JPG" alt="News Article">
+			</a>
+			<div class="desc">
+				<a href="https://www.breakit.se/artikel/15129/almi-invest-backar-vevios-bolaget-bakom-trygghetslarm" target="_blank">
+					<h3 class="headline"> Fellow startup closed deal!</h3>
+					<p class="headline">So happy to hear that a fellow startup closed a well deserved investment-deal! Congratulations to the investors for becoming a part of Hannes Team!</p>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="newsbox_container">
+		<div class="gallery">
+			<div class="gallery_box_top">
+				<div class="so_me_logo_container">
+					<a href="https://www.instagram.com/p/BnHCIhglm1u/?hl=da&taken-by=tendoforpeople" target="blank">
+						<img src="resurser/insta_button_orange.png" alt="Instagram Button" class="so_me_buttons">
+					</a>
+					<a href="https://www.facebook.com/tendoforpeople/photos/pcb.747213792288396/747213488955093/?type=3&theater" target="_blank">
+						<img src="resurser/fb_btn_orange.png" alt="Facebook button" class="so_me_buttons">
+					</a>
+				</div>
+			</div>
+				<a href="https://www.facebook.com/tendoforpeople/posts/747213792288396?__xts__[0]=68.ARCViJaldFRVWDK3RZmN8E-s1YcYzEHS2XvhB0slv0wwabe9ml_3Do6_EHnMINIrc1dOxLAphyUOVvrDMe-7vaaGca3BaVJnuw9cpBNLkBi5u3krE5-oaAMmC3IBREGm9x8yR1zsnk6hJvFyqbSNmi6runOrKMtUFjB9m7bLCoU-VrGVmibC&__tn__=-R" target="_blank">
+					<img src="resurser/tendo_post4.jpg" alt="Tendo post picture">
+				</a>
+					<div class="desc">
+			  			<a href="https://www.facebook.com/tendoforpeople/posts/747213792288396?__xts__[0]=68.ARCViJaldFRVWDK3RZmN8E-s1YcYzEHS2XvhB0slv0wwabe9ml_3Do6_EHnMINIrc1dOxLAphyUOVvrDMe-7vaaGca3BaVJnuw9cpBNLkBi5u3krE5-oaAMmC3IBREGm9x8yR1zsnk6hJvFyqbSNmi6runOrKMtUFjB9m7bLCoU-VrGVmibC&__tn__=-R" target="_blank">
+							<h3 class="headline">Moving day!</h3>
+			 				<p class="headline">After one and half years at teknologisk institut and Odense robotics startup hub, it's time for us to take the next step!<br>
+							We are so excited!</p>
+						</a>
+					</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer_responsive">
+	<div class="footer">
+		<div class="footer_color_block"></div>
+		<div class="footer_block"></div>
+		<div class="footer_logo_container"></div>
+		<div class="footer_logo">
+			<img src="resurser/footer_logo.png" alt="Tendo Logo">
+		</div>
+		<div class="footer_contact">
+			<h3>Contact Us</h3>
+			<p>info@tendoforpeople.se<br>
+			(+46)073-3310414</p>		
+		</div>
+		<div class="footer_adresse">
+			<h3>Adresse</h3>
+			<p>Forskerparken 10<br>
+			5230 Odense M<br>
+			Denmark</p>
+		</div>
+		<div class="we_are_tendo">
+			<h3>We will give you a hand.</h3>
+			<p>Be you.<br>
+				Grasp life with Tendo.</p>
+		</div>
+		<div class="footer_so_me">
+			<a href="https://www.facebook.com/tendoforpeople/" target="blank">
+				<img src="resurser/fb_btn_orange.png" alt="Instagram Button" class="footer_fb_logo">
+			</a>
+			<a href="https://www.instagram.com/tendoforpeople/?hl=da" target="_blank">
+				<img src="resurser/insta_button_orange.png" alt="Instagram Button" class="footer_insta_logo">
+			</a>
+		</div>
+	</div>
+</div>
 </body>
 </html>
