--- a/tendo_news.html
+++ b/tendo_news.html
@@ -186,36 +186,42 @@
 	</div>
 	<div class="footer_responsive">
 	<div class="footer">
-		<div class="footer_color_block"></div>
+	<div class="footer_color_block"></div>
+		<div class="footer_wrapper">
 			<div class="footer_contact">
-			<h3>Contact Us</h3>
-			<p>info@tendoforpeople.se<br>
-			(+46)073-3310414</p>		
+				<h3>Contact Us</h3>
+				<p>info@tendoforpeople.se<br>
+				(+46)073-3310414</p>		
+			</div>
+		<div class="footer_adresse">
+			<h3>Address</h3>
+			<p>Forskerparken 10<br>
+			5230 Odense M<br>
+			Denmark</p>
 		</div>
 		<div class="footer_block"></div>
-		<div class="we_are_tendo">
-			<h3>We will give you a hand.</h3>
-			<p>Be you.<br>
-				Grasp life with Tendo.</p>
-		</div>
 		<div class="footer_logo_container"></div>
-		<div class="footer_logo">
-			<img src="resurser/footer_logo.png" alt="Tendo Logo">
-		</div>
-		<div class="footer_so_me">
+			<div class="footer_logo">
+				<img src="resurser/footer_logo.png" alt="Tendo Logo">
+			</div>
+			<div class="we_are_tendo">
+				<h3>We will give you a hand.</h3>
+				<p>Be you.<br>
+				Grasp life with Tendo.</p>
+			</div>
+			<div class="follow_us"><h3>Follow us at</h3></div>
+			<div class="footer_so_me">
 			<a href="https://www.facebook.com/tendoforpeople/" target="blank">
 				<img src="resurser/fb_btn_orange.png" alt="Instagram Button" class="footer_fb_logo">
 			</a>
 			<a href="https://www.instagram.com/tendoforpeople/?hl=da" target="_blank">
 				<img src="resurser/insta_button_orange.png" alt="Instagram Button" class="footer_insta_logo">
 			</a>
-		</div>
-		<div class="footer_adresse">
-			<h3>Adresse</h3>
-			<p>Forskerparken 10<br>
-			5230 Odense M<br>
-			Denmark</p>
-		</div>
+			<a href="https://www.youtube.com/" target="_blank">
+				<img src="resurser/youtube_white.png" class="footer_youtube_logo">
+			</a>
+			</div>	
+	</div>
 	</div>
 </div>
 	<!--javascript-->
