--- a/tendo_news.html
+++ b/tendo_news.html
@@ -184,10 +184,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer_responsive">
 	<div class="footer">
 	<div class="footer_color_block"></div>
-		<div class="footer_wrapper">
+	  <div class="footer_wrapper">
 			<div class="footer_contact">
 				<h3>Contact Us</h3>
 				<p>info@tendoforpeople.se<br>
@@ -199,7 +198,6 @@
 			5230 Odense M<br>
 			Denmark</p>
 		</div>
-		<div class="footer_block"></div>
 		<div class="footer_logo_container"></div>
 			<div class="footer_logo">
 				<img src="resurser/footer_logo.png" alt="Tendo Logo">
@@ -209,7 +207,8 @@
 				<p>Be you.<br>
 				Grasp life with Tendo.</p>
 			</div>
-			<div class="follow_us"><h3>Follow us at</h3></div>
+			<div class="follow_us"><h3>Follow us at</h3>
+		  	</div>
 			<div class="footer_so_me">
 			<a href="https://www.facebook.com/tendoforpeople/" target="blank">
 				<img src="resurser/fb_btn_orange.png" alt="Instagram Button" class="footer_fb_logo">
@@ -220,8 +219,7 @@
 			<a href="https://www.youtube.com/" target="_blank">
 				<img src="resurser/youtube_white.png" class="footer_youtube_logo">
 			</a>
-			</div>	
-	</div>
+		</div>	
 	</div>
 </div>
 	<!--javascript-->
